# cpp-dev-new

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  conanfile.py  dev_new.cpp  dev_new.hpp  format-check.sh  format_check.sh  format_fix.sh  main.cpp
example/: initial.cpp  main.cpp
include/: dev_new.hpp
lib/: dev_new.cpp
profiles/: linux-64-clang-6-libstdc++-debug  linux-64-clang-6-libstdc++-debug-tidy  linux-64-clang-6-libstdc++-release  linux-64-clang-6-libstdc++-release.txt  linux-64-clang-7-libstdc++-release-tidy  windows-32-vs15-release
source/include/: dev_new.hpp
source/lib/: dev_new.cpp
source/test/error_testing/: asio_composed.cpp  asio_composed_basic.cpp  asio_post.cpp  asio_post_basic.cpp  asio_post_loop.cpp  asio_post_loop_copy_mem.cpp  asio_post_loop_move_mem.cpp  asio_post_loop_move_mem_v2.cpp  asio_timer_loop_copy_mem.cpp  asio_timer_loop_move_mem.cpp  asio_udp_read_timeout_basic.cpp  asio_udp_read_timeout_basic_copy.cpp  asio_udp_read_timeout_basic_copy_v2.cpp  run_loop.hpp  std_string.cpp
source/test/unit/: dev_new_catch.hpp  error_point.cpp
test/: std_string.cpp
test_package/: CMakeLists.txt  conanfile.py  example.cpp
